--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "dev:host": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "test": "vitest",
+    "coverage": "vitest --run coverage"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^3.0.0",
     "@types/mapbox-gl": "^2.7.5",
     "autoprefixer": "^10.4.8",
+    "jsdom": "^20.0.3",
+    "msw": "^0.49.0",
     "postcss": "^8.4.16",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
@@ -22,7 +27,8 @@
     "tailwindcss": "^3.1.8",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vitest": "^0.25.2"
   },
   "dependencies": {
     "@beyonk/svelte-mapbox": "^8.1.4",
