--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,7 @@ jobs:
         cache: 'npm'
     - name: 'Install Dependencies'
       run: npm i
+    - name: Run perettier
+      run: npm run format:check
     - name: 'Run tests'
       run: npm test
