--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@mapbox/mapbox-sdk": "^0.14.0",
 		"mapbox": "^1.0.0-beta10",
 		"mapbox-gl": "^2.10.0",
+		"node-fetch": "^3.3.0",
 		"svelte-icons-pack": "^2.0.0",
 		"svelte-spa-router": "^3.3.0"
 	}
