--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,9 @@ on:
 
 jobs:
   build:
-
+    env:
+      VITE_API_ENDPOINT: http://localhost:8000/api/v1
+      VITE_MAPBOX_TOKEN: test_token
     runs-on: ubuntu-latest
 
     strategy:
